# hello-cucumber-cpp

./: CMakeLists.txt  FindCuke.cmake  README.md  config
features/: difference.feature  intersection.feature  union.feature
features/step_definitions/: GTestSetOperatorSteps.cpp  SetOperatorSteps.cpp
src/: SetOperator.h
